components/button/config.less
@import "../color/config";
@import "../input/config";
@import "../border/config";

@button-font-size: 15px;
@button-small-font-size: @button-font-size - 1px;
@button-large-font-size: @button-font-size + 3px;
@button-font-weight: 400;

@button-height: @input-height-base;
@button-vertical-padding: 15px;
@button-horizontal-padding: 20px;

@button-border: 1px solid transparent;
@button-rounded-border-radius: @button-height;
@button-sharp-border-radius: @border-radius-base;

@button-transition-timing: cubic-bezier(0.420, 0.000, 0.580, 1.000);
@button-transition-duration: 0.15s;
@button-transition-fast-duration: 0.1s;

@button-primary-color: @white;
@button-primary-background-color: @green;

@button-action-color: @white;
@button-action-background-color: @blue;

@button-default-color: @blue;
@button-default-background-color: @white;
@button-default-border-color: @gray-light;

#celery {
  .button-animation(@duration) {
    transition: background-color @duration @button-transition-timing;
  }

  .button-vertical-padding(@height, @font-size) {
    @button-vertical-padding: (@height - @font-size) / 2;
  }

  .button-color(@color, @background-color) {
    color: @color;
    background-color: @background-color;
    border-color: @background-color;

    &:hover {
      color: @color;
      background-color: darken(@background-color, @color-grade-1);
    }

    &:active,
    &:focus {
      color: @color;
      background-color: lighten(@background-color, @color-grade-1);
    }
  }
}

